--- a/app/index.html
+++ b/app/index.html
@@ -8,10 +8,92 @@
    <title>Document</title>
    <link rel="stylesheet" href="css/libs.min.css">
    <link rel="stylesheet" href="css/style.min.css">
+   <link rel="preconnect" href="https://fonts.gstatic.com">
+   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
+   <header class='header'>
+      <div class="header__top">
+         <div class="container">
+            <div class="header__inner">
+               <div class="header__logo">
+                  <img src="img/logo.png" alt="none">
+               </div>
+               <div class="header__tel">
+                  <span>Need help?</span> Talk to an expert: <a href="tel:+61 3 8376 6284">+61 3 8376 6284</a>
+               </div>
+               <div class="header__block">
+                  <div class="btn-g">
+                     <a href="#">Login</a>
+                  </div>
+                  <div class="btn-r">
+                     <a href="#">Register</a>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <div class="header__menu">
+         <div class="container">
+            <div class="header__inner">
+               <ul>
+                  <li>
+                     <a href="#">
+                        Home
+                     </a>
+                  </li>
+                  <li>
+                     <a href="#">
+                        About
+                     </a>
+                  </li>
+                  <li>
+                     <a href="#">
+                        WordPress
+                     </a>
+                  </li>
+                  <li>
+                     <a href="#">
+                        Joomla
+                     </a>
+                  </li>
+                  <li>
+                     <a href="#">
+                        PSD
+                     </a>
+                  </li>
+                  <li>
+                     <a href="#">
+                        Plugins
+                     </a>
+                  </li>
+                  <li>
+                     <a href="#">
+                        Components
+                     </a>
+                  </li>
+                  <li>
+                     <a href="#">
+                        Pages
+                     </a>
+                  </li>
+                  <li>
+                     <a href="#">
+                        Contact
+                     </a>
+                  </li>
+                  <li>
+                     <a href="#">
+                        Help
+                     </a>
+                  </li>
+               </ul>
+            </div>
+         </div>
+      </div>
+   </header>
 
 
    <script src="https://ajax.googleapis.com/ajax/libs/cesiumjs/1.78/Build/Cesium/Cesium.js"></script>
