--- a/app/index.html
+++ b/app/index.html
@@ -94,7 +94,26 @@
          </div>
       </div>
    </header>
-
+   <section class="search" style=" background-image: url(/img/search-bg.png.jpg);">
+      <div class="container">
+         <div class="search__inner">
+            <div class="search__inner-title">
+               Welcome To Foxtar Market Place!
+            </div>
+            <div class="search__inner-text">
+               Premium WordPress Themes, Web Templates and Many More ...
+            </div>
+            <div class="form">
+               <form>
+                  <input type="text" placeholder="Search Your Keywords . . ." required>
+                  <button type='submit'>
+                     <img src="img/search-icon.png" alt="">
+                  </button>
+               </form>
+            </div>
+         </div>
+      </div>
+   </section>
 
    <script src="https://ajax.googleapis.com/ajax/libs/cesiumjs/1.78/Build/Cesium/Cesium.js"></script>
    <script src="js/libs.min.js"></script>
