--- a/app/index.html
+++ b/app/index.html
@@ -862,6 +862,18 @@
          </div>
       </div>
    </section>
+   <section class="author" style="background-image: url(img/author-bg.jpg);">
+      <div class="author__box">
+         <div class="author__text">
+            Over <span>20,000</span> Author Are Involved Here!
+         </div>
+         <button class="author__button">
+            <a href="#">
+               Become A Author
+            </a>
+         </button>
+      </div>
+   </section>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/cesiumjs/1.78/Build/Cesium/Cesium.js"></script>
