added tutorial section

--- a/app/index.html
+++ b/app/index.html
@@ -874,6 +874,33 @@
          </button>
       </div>
    </section>
+   <section class="tutorial">
+      <div class="container">
+         <div class="tutorial__ttile">
+            Free Monthly Tutorials To Help You With Your Project
+         </div>
+         <div class="tutorial__inner">
+            <div class="tutorial__inner-box">
+               <div class="tutorial__inner-img" style="background-image: url(img/tutorial.jpg);"></div>
+               <div class="tutorial__inner-text">
+                  Web Design Tutorials
+               </div>
+            </div>
+            <div class="tutorial__inner-box">
+               <div class="tutorial__inner-img" style="background-image: url(img/tutorial.jpg);"></div>
+               <div class="tutorial__inner-text">
+                  WordPress Tutorials
+               </div>
+            </div>
+            <div class="tutorial__inner-box">
+               <div class="tutorial__inner-img" style="background-image: url(img/tutorial.jpg);"></div>
+               <div class="tutorial__inner-text">
+                  HTML & CSS Tutorials
+               </div>
+            </div>
+         </div>
+      </div>
+   </section>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/cesiumjs/1.78/Build/Cesium/Cesium.js"></script>
