--- a/app/index.html
+++ b/app/index.html
@@ -901,6 +901,82 @@
          </div>
       </div>
    </section>
+   <footer class="footer">
+      <div class="footer__content">
+         <div class="container">
+            <div class="footer__inner">
+               <div class="footer__col col-1">
+                  <div class="footer__col-title ">
+                     About Company
+                  </div>
+                  <div class="footer__col-text">
+                     Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim digniSuspen disse.Fusce sit amet
+                     urna iat.Praesent vel
+                     rutrum purus.
+                  </div>
+                  <div class="footer__col-info">
+                     <a class="footer__col-loc" href="#">
+                        PO Box 16122 Collins Street West
+                        Victoria 8007 Australia
+                     </a>
+                     <a class="footer__col-tel" href="tel(61383766284)">
+                        +61 3 8376 6284
+                     </a>
+                  </div>
+               </div>
+               <div class="footer__col col-2">
+                  <div class="footer__col-title ">
+                     Join Our Community
+                  </div>
+                  <ul class="footer__col-list">
+                     <li>Home</li>
+                     <li>Forums</li>
+                     <li>Become an Author</li>
+                     <li>Community Meetups</li>
+                     <li>Become an Affiliate</li>
+                  </ul>
+               </div>
+               <div class="footer__col  col-3">
+                  <div class="footer__col-title">
+                     Need Help?
+                  </div>
+                  <ul class="footer__col-list">
+                     <li>Help Center</li>
+                     <li>Foxtar Market Terms</li>
+                     <li>Author Terms</li>
+                     <li>Foxtar Licenses</li>
+                     <li>Contact Us</li>
+                  </ul>
+               </div>
+               <div class="footer__col col-4">
+                  <div class="footer__col-title ">
+                     Follow Us On
+                  </div>
+                  <ul class="footer__social-link">
+                     <li><a class='link-facebook' href="#"></a></li>
+                     <li><a class='link-twitter' href="#"></a></li>
+                     <li><a class='link-youtube' href="#"></a></li>
+                     <li><a class='link-pinterest' href="#"></a></li>
+                     <li><a class='link-linkedin' href="#"></a></li>
+                  </ul>
+                  <form class="footer__form">
+                     <div class="footer__form-title">
+                     </div>
+                     <input type="text" placeholder="E-mail Address">
+                     <button type='submit'></button>
+                  </form>
+               </div>
+            </div>
+         </div>
+      </div>
+      <div class="footer__copy">
+         <div class="container">
+            <div class="footer__copy-text">
+               © 2017 Foxtar market place. Trademarks and brands are the property of their respective owners.
+            </div>
+         </div>
+      </div>
+   </footer>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.2/jquery.rateyo.min.js"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/cesiumjs/1.78/Build/Cesium/Cesium.js"></script>
